--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,17 @@
 body {
   font-family: 'Open Sans', sans-serif;
-  margin: 0px;
+  margin: 0 auto;
+  /*
+	background-image: url(/img/hero-image.png);
+	background-repeat: no-repeat;
+	background-size: 100%;
+	background-position: center;
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	*/
 }
 
 .hero-image img {
@@ -26,6 +37,8 @@ body {
   -webkit-align-content: center;
   -ms-flex-line-pack: center;
   align-content: center;
+  width: 30%;
+  min-width: 480px;
 }
 
 .login .login-content {
@@ -34,7 +47,7 @@ body {
   -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
-  width: 240px;
+  /*width: 240px; */
 }
 
 .login .login-content .login-logo {
@@ -54,11 +67,55 @@ body {
 .login .login-content .login-logo img {
   width: 160px;
   vertical-align: middle;
-  margin: 0 0 0 20px;
+  margin: 0 0 0 50px;
 }
 
 .login .login-content .login-header {
   text-align: center;
   font-size: 18px;
-  font-weight: lighter;
+  font-weight: light;
+  margin-bottom: 50px;
+}
+
+.login .login-content input[type="name"], .login .login-content input[type="password"] {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+  font-weight: light;
+  width: 260px;
+  height: 40px;
+  padding-left: 20px;
+  margin-bottom: 15px;
+  background-color: #efefef;
+  border-radius: 5px;
+  border-width: 0;
+  border: none;
+  outline: none;
+  transition: all .3s;
+}
+
+.login .login-content input[type="name"]:focus, .login .login-content input[type="password"]:focus {
+  outline: none;
+  border: 1px solid black;
+  background-color: white;
+}
+
+.login .login-content input[type="submit"] {
+  cursor: pointer;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+  font-weight: light;
+  width: 280px;
+  height: 40px;
+  padding: 0;
+  margin-bottom: 15px;
+  background-color: #ffdd6c;
+  border-radius: 5px;
+  border: none;
+  outline: none;
+  transition: all .3s;
+}
+
+.login .login-content input[type="submit"]:hover {
+  background-color: black;
+  color: #ffdd6c;
 }
