--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,20 @@
 body {
 	font-family: 'Open Sans', sans-serif;
-	margin: 0px;
+	margin: 0 auto;
+	/*
+	background-image: url(/img/hero-image.png);
+	background-repeat: no-repeat;
+	background-size: 100%;
+	background-position: center;
+	position: absolute;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	*/
+
 }
+
 
 .hero-image {
 	img {
@@ -23,12 +36,14 @@ body {
 	display: flex;
 	justify-content: center;
 	align-content: center;
+	width: 30%;
+	min-width: 480px;
 
 
 	.login-content{
 		padding: 100px;
 		align-self: center;
-		width: 240px;
+		/*width: 240px; */
 
 		.login-logo{
 			position: center;
@@ -46,7 +61,7 @@ body {
 			img{
 				width:160px;
 				vertical-align: middle;
-				margin: 0 0 0 20px; 
+				margin: 0 0 0 50px; 
 			
 
 			}
@@ -55,7 +70,51 @@ body {
 		.login-header {
 			text-align: center;
 			font-size: 18px;
-			font-weight: lighter;
+			font-weight: light;
+			margin-bottom: 50px;
+		}
+
+		input[type="name"], input[type="password"]{
+			font-family: 'Open Sans', sans-serif;
+			font-size: 12px;
+			font-weight: light;
+			width: 260px;
+			height: 40px;
+			padding-left: 20px;
+			margin-bottom: 15px;
+			background-color: #efefef;
+			border-radius: 5px;
+			border-width: 0;
+			border: none;
+			outline: none;
+			transition: all .3s;
+			&:focus {
+				outline: none; border: 1px solid black; 
+				background-color: white;
+
+			}
+
+		}
+
+		input[type="submit"] {
+				cursor: pointer;
+				font-family: 'Open Sans', sans-serif;
+				font-size: 12px;
+				font-weight: light;
+				width: 280px;
+				height: 40px;
+				padding: 0;
+				margin-bottom: 15px;
+				background-color: #ffdd6c;
+				border-radius: 5px;
+				border: none;
+				outline: none;
+				transition: all .3s;
+				&:hover {
+					background-color: black;
+					color: #ffdd6c;
+				}
+		
 		}
 	}
 }
