--- a/css/style.css
+++ b/css/style.css
@@ -1,30 +1,32 @@
 body {
   font-family: 'Open Sans', sans-serif;
+  height: 100%;
   margin: 0 auto;
-  /*
-	background-image: url(/img/hero-image.png);
-	background-repeat: no-repeat;
-	background-size: 100%;
-	background-position: center;
-	position: absolute;
-	left: 0;
-	top: 0;
-	height: 100%;
-	width: 100%;
-	*/
+  background-image: url(/img/hero-image.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-.hero-image img {
-  object-fit: cover;
-  height: 100vh;
-  width: 100%;
-  position: relative;
-  top: 0;
-  left: 0;
+/*
+.hero-image {
+	img {
+	object-fit: cover;
+	height: 100vh;
+	width: 100%;
+	position: relative;
+	top: 0;
+	left: 0;
+	}
+}
+*/
+.container {
+  overflow: hidden;
 }
 
 .login {
-  position: absolute;
   top: 0px;
   background-color: white;
   height: 100%;
@@ -38,7 +40,8 @@ body {
   -ms-flex-line-pack: center;
   align-content: center;
   width: 30%;
-  min-width: 480px;
+  min-width: 320px;
+  position: relative;
 }
 
 .login .login-content {
@@ -61,13 +64,17 @@ body {
   text-align: center;
   cursor: pointer;
   position: absolute;
-  top: 80px;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  top: 50px;
 }
 
 .login .login-content .login-logo img {
   width: 160px;
   vertical-align: middle;
-  margin: 0 0 0 50px;
+  margin: 0 auto;
 }
 
 .login .login-content .login-header {
