--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,7 @@ body {
 	height: 100%;
 	margin: 0 auto;
 
-	background-image: url(/img/hero-image.jpg);
+	background-image: url(img/hero-image.jpg);
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-repeat:  no-repeat;
