--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Open Sans', sans-serif;
   height: 100%;
   margin: 0 auto;
-  background-image: url("/img/hero-image.jpg");
+  background-image: url("../img/hero-image.jpg");
   background-repeat: no-repeat;
   background-position: center center;
   background-repeat: no-repeat;
